# cdiag

./: CMakeLists.txt  README.md  test_missing_semi.c
scripts/: run_tests.sh
src/: main.cpp
src/cli/: explain.cpp  explain.h
src/diagnostics/: Diagnostic.h  Grouping.cpp  Grouping.h  Normalizer.cpp  Normalizer.h  Parser.cpp  Parser.h
src/rules/: RootCauseEngine.cpp  RootCauseEngine.h  Rule.h
